--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
         <h1>Cat Tax Calculator</h1>
         <p>Paying your cat taxes is a lot easier than paying your income taxes. Just click the button below to calculate
             your tax.</p>
+       
+       
         <!-- TODO: Call calcButtonClick function when this button is clicked -->
         <!-- TODO: Style this button as a primary button with bootstrap -->
         <button>Calculate My Cat Tax</button>
+        <button onclick ="calcButtonClick()"></button>
         <p id='amountOwed'></p>
+
         <!-- TODO: Add button that lets you pay your cat tax -->
         <!-- TODO: Call payButton function when this button is clicked -->
         <!-- TODO: Style this button as a success button with bootstrap -->
         <!-- TODO: This button should not show unless a tax amount has been calculated -->
         <button class="payBtn"></button>
+        <button onclick ="payButton()"></button>
         <div class="imageContainer"></div>
     </div>
 </body>
 <!-- TODO: Import Bootstrap JS and jQuery CSS via CDN -->
 <!-- TODO: Import main.js file -->
-
+import main.js
 </html>
